@@ -1,4 +1,8 @@
-2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>
+2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* BigInteger.cs: long CompareTo.
+
+2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* BigInteger.cs: IComparable.
 
